updating gpio and console examples
updating gpio and console examples

--- a/examples/getting-started/hamming/nucleo-f401/Makefile
+++ b/examples/getting-started/hamming/nucleo-f401/Makefile
@@ -19,8 +19,8 @@ OBJS=$(SRCS:.c=.o)
 .PHONY: $(shell mkdir -p obj) lib proj all depend
 all: proj
 
-#include nucelo-f429zi makefile - NOTE MUST BE LAST TO INCLUDE
-include $(SOURCELIB_ROOT)/components/boards/nucleo-f429zi/board.mk
+#include nucelo-xxx makefile - NOTE MUST BE LAST TO INCLUDE
+include $(SOURCELIB_ROOT)/components/boards/nucleo-f401re/board.mk
 include $(SOURCELIB_ROOT)/components/mk/m_launch.mk
 include $(SOURCELIB_ROOT)/components/mk/m_common.mk
 
