updated timer interrupt example

--- a/templates/freertos/nucleo-f429/Makefile
+++ b/templates/freertos/nucleo-f429/Makefile
@@ -28,7 +28,7 @@ include ./filelist.mk
 #Include freertos makefile
 include $(FREERTOS_PATH)/filelist.mk
 
-#include nucelo-f429zi makefile - NOTE MUST BE LAST TO INCLUDE
+#include nucelo-xxx makefile - NOTE MUST BE LAST TO INCLUDE
 include $(SOURCELIB_ROOT)/components/boards/nucleo-f429zi/board.mk
 include $(SOURCELIB_ROOT)/components/mk/m_launch.mk
 include $(SOURCELIB_ROOT)/components/mk/m_common.mk
