--- a/examples/timer/interrupt/nucleo-f429/Makefile
+++ b/examples/timer/interrupt/nucleo-f429/Makefile
@@ -18,10 +18,7 @@ OBJS=$(SRCS:.c=.o)
 .PHONY: $(shell mkdir -p obj) lib proj all depend
 all: proj
 
-#include other files
-include ./filelist.mk
-
-#include nucelo-f429zi makefile - NOTE MUST BE LAST TO INCLUDE
+#include nucelo-xxx makefile - NOTE MUST BE LAST TO INCLUDE
 include $(SOURCELIB_ROOT)/components/boards/nucleo-f429zi/board.mk
 include $(SOURCELIB_ROOT)/components/mk/m_launch.mk
 include $(SOURCELIB_ROOT)/components/mk/m_common.mk
