--- a/examples/gpio/interrupt/nucleo-l476/Makefile
+++ b/examples/gpio/interrupt/nucleo-l476/Makefile
@@ -20,8 +20,8 @@ all: proj
 
 #include nucelo-xxx makefile - NOTE MUST BE LAST TO INCLUDE
 include $(SOURCELIB_ROOT)/components/boards/nucleo-l476rg/board.mk
-include $(SOURCELIB_ROOT)/components/mk/m_launch.mk
-include $(SOURCELIB_ROOT)/components/mk/m_common.mk
+include $(SOURCELIB_ROOT)/components/mk/nucleo-l476/m_launch.mk
+include $(SOURCELIB_ROOT)/components/mk/nucleo-l476/m_common.mk
 
 lib:
 	$(MAKE) -C lib
