updating cli examples

--- a/examples/os/fr_cli/nucleo-f401/Makefile
+++ b/examples/os/fr_cli/nucleo-f401/Makefile
@@ -33,10 +33,10 @@ include $(FREERTOS_PATH)/filelist.mk
 #Include freertos makefile
 include $(FREERTOSCLI_PATH)/filelist.mk
 
-#include nucelo-f429zi makefile - NOTE MUST BE LAST TO INCLUDE
-include $(SOURCELIB_ROOT)/components/boards/nucleo-f429zi/board.mk
-include $(SOURCELIB_ROOT)/components/mk/m_launch.mk
-include $(SOURCELIB_ROOT)/components/mk/m_common.mk
+#include nucelo makefile - NOTE MUST BE LAST TO INCLUDE
+include $(SOURCELIB_ROOT)/components/boards/nucleo-f401re/board.mk
+include $(SOURCELIB_ROOT)/components/mk/nucleo-f401/m_launch.mk
+include $(SOURCELIB_ROOT)/components/mk/nucleo-f401/m_common.mk
 
 lib:
 	$(MAKE) -C lib
